test_compile_errors/tests/compile-fail/v_comma.stderr
error: no rules expected the token `,`
 --> $DIR/v_comma.rs:7:12
  |
7 |     infov!(,); //~ ERROR expected identifier, found `,`
  |            ^ no rules expected this token in macro call

error[E0601]: `main` function not found in crate `$CRATE`
  |
  = note: consider adding a `main` function to `$DIR/tests/compile-fail/v_comma.rs`

For more information about this error, try `rustc --explain E0601`.
